--- a/01-intro/homework_1_.ipynb
+++ b/01-intro/homework_1_.ipynb
@@ -112,7 +112,10 @@
    "id": "6b039084-3f84-437e-bf6f-0fef386edb6f",
    "metadata": {},
    "source": [
-    "#### Question 1: Read the data for January. How many columns are there?\n",
+    "#### Question 1 [Downloading the data]:\n",
+    "\n",
+    "Read the data for January. How many columns are there?\n",
+    "\n",
     "Answer: 19"
    ]
   },
@@ -121,7 +124,10 @@
    "id": "de0fe0db-7b55-4f40-84c5-1c76ef982793",
    "metadata": {},
    "source": [
-    "#### Question 2: What's the standard deviation of the trips duration in January?\n",
+    "#### Question 2 [Computing duration]: \n",
+    "\n",
+    "What's the standard deviation of the trips duration in January?\n",
+    "\n",
     "Answer: 42.59"
    ]
   },
@@ -626,7 +632,10 @@
    "id": "6c955974-5913-4630-a79f-12ae748ae7ff",
    "metadata": {},
    "source": [
-    "#### Question 3: What fraction of the records left after you dropped the outliers?\n",
+    "#### Question 3 [Dropping outliers]: \n",
+    "\n",
+    "What fraction of the records left after you dropped the outliers?\n",
+    "\n",
     "Answer: 98%"
    ]
   },
@@ -640,7 +649,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_39611/652934418.py:2: UserWarning: \n",
+      "/tmp/ipykernel_68960/652934418.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -689,7 +698,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_39611/3405527495.py:2: UserWarning: \n",
+      "/tmp/ipykernel_68960/3405527495.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -738,7 +747,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_39611/248571169.py:2: UserWarning: \n",
+      "/tmp/ipykernel_68960/248571169.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -787,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_39611/294186978.py:2: UserWarning: \n",
+      "/tmp/ipykernel_68960/294186978.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -831,7 +840,9 @@
    "id": "0e3d42da-d447-4ca4-a00b-d40094143238",
    "metadata": {},
    "source": [
-    "#### Question 4: What's the dimensionality of the feature matrix (number of columns)?\n",
+    "#### Question 4 [One-hot encoding]: \n",
+    "What's the dimensionality of the feature matrix (number of columns)?\n",
+    "\n",
     "Answer: 515"
    ]
   },
@@ -863,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "684119f7-6cd9-4ae5-a2ec-96aea2cdd7e4",
    "metadata": {},
    "outputs": [],
@@ -891,22 +902,30 @@
     "    # build validation data\n",
     "    X_val = dict_vet.transform(val_dicts)\n",
     "\n",
-    "    return X_train, X_val"
+    "    # target variable\n",
+    "    target = 'duration'\n",
+    "\n",
+    "    # train and validation labels\n",
+    "    y_train = df_train[target].values\n",
+    "    y_val = df_val[target].values\n",
+    "\n",
+    "    return X_train, X_val, y_train, y_val "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "ee6daae2-5090-40f2-83ae-8f4fbd870095",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_val = preprocessing(df_train, df_val)"
+    "# preprocess the data and build the train and validation sets\n",
+    "X_train, X_val, y_train, y_val = preprocessing(df_train, df_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "b23e59a7-574c-4f29-9cbe-dd22b2e20c4d",
    "metadata": {},
    "outputs": [
@@ -924,8 +943,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "id": "c80ef04b-2c15-46a6-b18f-7673222764ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3009173,), (2855951,))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.shape, y_val.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "defc8fd8-5c73-4d74-8569-e595f15a406b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_data(X_train, X_val, y_train, y_val):\n",
+    "\n",
+    "    # initialize model\n",
+    "    linear_regression = LinearRegression()\n",
+    "\n",
+    "    # fit the model\n",
+    "    linear_regression.fit(X_train, y_train)\n",
+    "\n",
+    "    # calculate the prediction on the training set\n",
+    "    y_pred_train = linear_regression.predict(X_train)\n",
+    "\n",
+    "    # evaluate the model - training data\n",
+    "    RMSE_train = root_mean_squared_error(y_train, y_pred_train)\n",
+    "\n",
+    "    # calculate the prediction on the evaluation set\n",
+    "    y_pred_ev = linear_regression.predict(X_val)\n",
+    "\n",
+    "    # evaluate the model - evaluation data\n",
+    "    RMSE_ev = root_mean_squared_error(y_val, y_pred_ev)\n",
+    "    \n",
+    "\n",
+    "    return RMSE_train, RMSE_ev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "edb4910d-7fd6-41c5-89a8-f9a7b3a4ce98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE - training set: 7.649261932106969\n",
+      "RMSE - validation set: 7.811818743246608\n"
+     ]
+    }
+   ],
+   "source": [
+    "# training the model and calculating the RMSE\n",
+    "# on the training set\n",
+    "RMSE_train, RMSE_ev = train_data(X_train, X_val, y_train, y_val)\n",
+    "print(f\"RMSE - training set: {RMSE_train}\")\n",
+    "print(f\"RMSE - validation set: {RMSE_ev}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f9114a6-c4ea-4b46-bc21-e67ecdea3cec",
+   "metadata": {},
+   "source": [
+    "#### Question 5 [Training a model]: \n",
+    "What's the RMSE on train?\n",
+    "\n",
+    "Answer: 7.64"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18914115-e2fb-4fa8-b577-4e6e24aa7563",
+   "metadata": {},
+   "source": [
+    "#### Question 6 [Evaluation the model]: \n",
+    "What's the RMSE on validation?\n",
+    "\n",
+    "Answer: 7.81"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba2bb1c1-f7e9-4e1f-bdb2-9c7abe4e17f7",
    "metadata": {},
    "outputs": [],
    "source": []
