--- a/01-intro/homework_1_.ipynb
+++ b/01-intro/homework_1_.ipynb
@@ -87,27 +87,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "877b24cf-177b-495a-9458-8c8985451b13",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14.204864143736492"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_train.duration.mean()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "6b039084-3f84-437e-bf6f-0fef386edb6f",
    "metadata": {},
@@ -133,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "acab85af-2641-4ce1-b0cb-5d885b32d8d3",
    "metadata": {},
    "outputs": [
@@ -337,7 +316,7 @@
        "4  10.833333  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "92420f84-144e-4f35-ac81-307bdd4cb780",
    "metadata": {},
    "outputs": [
@@ -552,7 +531,7 @@
        "6  27.950000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,8 +542,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "df232791-208b-452c-b3a8-a8626c82bb68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking for null values in 'duration'\n",
+    "df_train.duration.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "141e77f9-6167-492c-929a-959565298ba5",
    "metadata": {},
    "outputs": [
     {
@@ -580,19 +581,19 @@
    ],
    "source": [
     "# checking for null values in 'duration'\n",
-    "df_train.duration.isnull().sum()"
+    "df_val.duration.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "141e77f9-6167-492c-929a-959565298ba5",
+   "id": "1c9449c8-01f4-4c3b-8b2a-8ae860f9f05d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "42.594351241920904"
       ]
      },
      "execution_count": 8,
@@ -601,30 +602,8 @@
     }
    ],
    "source": [
-    "# checking for null values in 'duration'\n",
-    "df_val.duration.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "1c9449c8-01f4-4c3b-8b2a-8ae860f9f05d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9.939385620145579"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "# standard deviation of January's duration\n",
-    "df_train.duration.std()"
+    "df_train_copy.duration.std()"
    ]
   },
   {
@@ -641,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f63fc936-3862-4141-aa84-794a736623e8",
    "metadata": {},
    "outputs": [
@@ -649,7 +628,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_68960/652934418.py:2: UserWarning: \n",
+      "/tmp/ipykernel_79320/652934418.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -668,7 +647,7 @@
        "<Axes: xlabel='duration', ylabel='Density'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -690,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "3e458530-62e5-4d20-be02-9fae71175c20",
    "metadata": {},
    "outputs": [
@@ -698,7 +677,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_68960/3405527495.py:2: UserWarning: \n",
+      "/tmp/ipykernel_79320/3405527495.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -717,7 +696,7 @@
        "<Axes: xlabel='duration', ylabel='Density'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -739,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "66ad30b8-edc5-450d-9daa-9237949a3d54",
    "metadata": {},
    "outputs": [
@@ -747,7 +726,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_68960/248571169.py:2: UserWarning: \n",
+      "/tmp/ipykernel_79320/248571169.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -766,7 +745,7 @@
        "<Axes: xlabel='duration', ylabel='Density'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -788,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "72699ff8-248f-4230-8e3e-b05ece062c92",
    "metadata": {},
    "outputs": [
@@ -796,7 +775,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_68960/294186978.py:2: UserWarning: \n",
+      "/tmp/ipykernel_79320/294186978.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -815,7 +794,7 @@
        "<Axes: xlabel='duration', ylabel='Density'>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -848,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "368fe348-f9aa-441b-90ff-00078aec6e2d",
    "metadata": {},
    "outputs": [
@@ -863,7 +842,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "684119f7-6cd9-4ae5-a2ec-96aea2cdd7e4",
    "metadata": {},
    "outputs": [],
@@ -914,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "ee6daae2-5090-40f2-83ae-8f4fbd870095",
    "metadata": {},
    "outputs": [],
@@ -925,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "b23e59a7-574c-4f29-9cbe-dd22b2e20c4d",
    "metadata": {},
    "outputs": [
@@ -943,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "c80ef04b-2c15-46a6-b18f-7673222764ae",
    "metadata": {},
    "outputs": [
@@ -953,7 +932,7 @@
        "((3009173,), (2855951,))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "defc8fd8-5c73-4d74-8569-e595f15a406b",
    "metadata": {},
    "outputs": [],
@@ -995,19 +974,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "edb4910d-7fd6-41c5-89a8-f9a7b3a4ce98",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE - training set: 7.649261932106969\n",
-      "RMSE - validation set: 7.811818743246608\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# training the model and calculating the RMSE\n",
     "# on the training set\n",
