Adding the link to the homework description and a title to the notebook.

--- a/01-intro/homework_1.ipynb
+++ b/01-intro/homework_1.ipynb
@@ -1,16 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b9d8ab56-ba01-4fce-87fd-44be4f8b47a6",
+   "metadata": {},
+   "source": [
+    "### Homework - Module 1: Introduction\n",
+    "Homework Description: https://github.com/DataTalksClub/mlops-zoomcamp/blob/main/cohorts/2024/01-intro/homework.md"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "105f06ca-b4ac-4e80-9425-7587080b5f94",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction import DictVectorizer\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.linear_model import Lasso\n",
-    "from sklearn.linear_model import Ridge\n",
     "from sklearn.metrics import root_mean_squared_error\n",
     "import pandas as pd\n",
     "import sklearn\n",
@@ -21,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d0e4a2e9-631d-48be-b171-b19e07157a2c",
    "metadata": {},
    "outputs": [],
@@ -61,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4ea10ad0-2445-44e6-a8f4-5f33202b8c89",
    "metadata": {},
    "outputs": [
@@ -112,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "acab85af-2641-4ce1-b0cb-5d885b32d8d3",
    "metadata": {},
    "outputs": [
@@ -316,7 +323,7 @@
        "4  10.833333  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "92420f84-144e-4f35-ac81-307bdd4cb780",
    "metadata": {},
    "outputs": [
@@ -531,7 +538,7 @@
        "6  27.950000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,30 +549,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "df232791-208b-452c-b3a8-a8626c82bb68",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# checking for null values in 'duration'\n",
-    "df_train.duration.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
-   "id": "141e77f9-6167-492c-929a-959565298ba5",
+   "id": "df232791-208b-452c-b3a8-a8626c82bb68",
    "metadata": {},
    "outputs": [
     {
@@ -581,12 +566,34 @@
    ],
    "source": [
     "# checking for null values in 'duration'\n",
-    "df_val.duration.isnull().sum()"
+    "df_train.duration.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "141e77f9-6167-492c-929a-959565298ba5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking for null values in 'duration'\n",
+    "df_val.duration.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "1c9449c8-01f4-4c3b-8b2a-8ae860f9f05d",
    "metadata": {},
    "outputs": [
@@ -596,7 +603,7 @@
        "42.594351241920904"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f63fc936-3862-4141-aa84-794a736623e8",
    "metadata": {},
    "outputs": [
@@ -628,7 +635,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_79320/652934418.py:2: UserWarning: \n",
+      "/tmp/ipykernel_84041/652934418.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -647,7 +654,7 @@
        "<Axes: xlabel='duration', ylabel='Density'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -669,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "3e458530-62e5-4d20-be02-9fae71175c20",
    "metadata": {},
    "outputs": [
@@ -677,7 +684,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_79320/3405527495.py:2: UserWarning: \n",
+      "/tmp/ipykernel_84041/3405527495.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -696,7 +703,7 @@
        "<Axes: xlabel='duration', ylabel='Density'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -718,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "66ad30b8-edc5-450d-9daa-9237949a3d54",
    "metadata": {},
    "outputs": [
@@ -726,7 +733,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_79320/248571169.py:2: UserWarning: \n",
+      "/tmp/ipykernel_84041/248571169.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -745,7 +752,7 @@
        "<Axes: xlabel='duration', ylabel='Density'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -767,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "72699ff8-248f-4230-8e3e-b05ece062c92",
    "metadata": {},
    "outputs": [
@@ -775,7 +782,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_79320/294186978.py:2: UserWarning: \n",
+      "/tmp/ipykernel_84041/294186978.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -794,7 +801,7 @@
        "<Axes: xlabel='duration', ylabel='Density'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -827,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "368fe348-f9aa-441b-90ff-00078aec6e2d",
    "metadata": {},
    "outputs": [
@@ -842,7 +849,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "684119f7-6cd9-4ae5-a2ec-96aea2cdd7e4",
    "metadata": {},
    "outputs": [],
@@ -893,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "ee6daae2-5090-40f2-83ae-8f4fbd870095",
    "metadata": {},
    "outputs": [],
@@ -904,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "b23e59a7-574c-4f29-9cbe-dd22b2e20c4d",
    "metadata": {},
    "outputs": [
@@ -922,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "c80ef04b-2c15-46a6-b18f-7673222764ae",
    "metadata": {},
    "outputs": [
@@ -932,7 +939,7 @@
        "((3009173,), (2855951,))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,12 +950,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "defc8fd8-5c73-4d74-8569-e595f15a406b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_data(X_train, X_val, y_train, y_val):\n",
+    "def train_and_evaluate_model(X_train, X_val, y_train, y_val):\n",
     "\n",
     "    # initialize model\n",
     "    linear_regression = LinearRegression()\n",
@@ -974,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "edb4910d-7fd6-41c5-89a8-f9a7b3a4ce98",
    "metadata": {},
    "outputs": [
@@ -988,9 +995,9 @@
     }
    ],
    "source": [
-    "# training the model and calculating the RMSE\n",
+    "# training, evaluating the model and calculating the RMSE\n",
     "# on the training set\n",
-    "RMSE_train, RMSE_ev = train_data(X_train, X_val, y_train, y_val)\n",
+    "RMSE_train, RMSE_ev = train_and_evaluate_model(X_train, X_val, y_train, y_val)\n",
     "print(f\"RMSE - training set: {RMSE_train}\")\n",
     "print(f\"RMSE - validation set: {RMSE_ev}\")"
    ]
