--- a/02-experiment-tracking/experiment_tracking.ipynb
+++ b/02-experiment-tracking/experiment_tracking.ipynb
@@ -3225,7 +3225,9 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "f1944561-ee17-4783-b95b-11932afdcd7e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -18147,7 +18149,9 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "2cc16b44-1e98-48e3-9168-de53784cf4ae",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -18336,7 +18340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
